--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "gw2-magicfind-checklist",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "version": "0.0.8",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.3.1",
-    "@astrojs/svelte": "^4.0.4",
-    "@astrojs/tailwind": "^5.0.2",
-    "astro": "^3.6.4",
-    "svelte": "^5.0.0-next.1",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@tsconfig/svelte": "^5.0.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.6.2",
+    "tailwindcss": "^3.4.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
